<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="100dp"
    tools:context="com.example.android.signup.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/icon_background"
        android:layout_marginBottom="16dp">

        <ImageView
            android:src="@drawable/email_icon"
            style="@style/IconStyle" />

        <EditText
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
           style="@style/EditTextStyle"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/icon_background"
            android:layout_marginRight="5dp">

            <ImageView
                android:src="@drawable/password_key_icon"
                style="@style/IconStyle" />

            <EditText
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                style="@style/EditTextStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/icon_background">

            <ImageView
                android:src="@drawable/password_again_icon"
                style="@style/IconStyle" />

            <EditText
                android:hint="@string/pw_again_hint"
                android:inputType="textPassword"
                style="@style/EditTextStyle" />

        </LinearLayout>

    </LinearLayout>


    <EditText
        android:hint="@string/mobile_no_hint"
        android:inputType="phone"
        style="@style/EditTextStyle"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/sign_up_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/text_field_background"
        android:text="@string/continue_button"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:text="@string/account"
            style="@style/TextViewStyle"
            />

        <TextView
            android:id="@+id/sign_in"
            android:text="@string/sign_in"
            style="@style/TextViewStyle"
            />


    </LinearLayout>


</LinearLayout>